fix: [ui:sidebar-neighbor] Fixed overflowing list

--- a/src/styles/_pivotick.scss
+++ b/src/styles/_pivotick.scss
@@ -12,6 +12,7 @@
     min-height: 300px;
     display: block;
     aspect-ratio: 16 / 10;
+    max-height: 100%;
 
     background-color: var(--pvt-bg);
     background-image: var(--pvt-graph-background-image);
